--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   "author": "Daron McIntosh",
   "license": "ISC",
   "dependencies": {
-    "@isolution/youtube-audio-stream": "^1.2.1",
+    "@isolution/youtube-audio-stream": "^1.3.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "googleapis": "^40.0.0",
-    "helmet": "^3.18.0",
+    "googleapis": "^43.0.0",
+    "helmet": "^3.21.1",
     "heroku-ssl-redirect": "0.0.4",
-    "loglevel": "^1.6.2",
+    "loglevel": "^1.6.4",
     "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
@@ -31,13 +31,14 @@
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "concurrently": "^5.0.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "nodemon": "^1.19.1"
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "nodemon": "^1.19.3"
   }
 }
